voting-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: voting123.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: voting-service
              port:
                number: 80
        - path: /result
          pathType: Prefix
          backend:
            service:
              name: result-service
              port:
                number: 80
